# gxhash-cpp

./: CMakeLists.txt
src/: compiler.h  gxhash-bm.cc  gxhash.cc  gxhash.h
src/platform/: arm.h  x86.h
